syntax = "proto3";

package exonum.qa;

option java_package = "com.exonum.binding.qaservice";

// QA service configuration parameters.
message QaConfiguration {
  // The name of a time oracle service instance to use.
  string time_oracle_name = 1;
}

// Parameters to use in the QA service resume.
message QaResumeArguments {
  // name of the counter to create
  string counter_name = 1;
  // Identifies either to throw execution exception or not.
  bool should_throw_exception = 2;
}
